--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
           </div>
           <p>
             Thankful to have thoughtful @HJMS_Official administrators who
-            provided a coffee cart & @CrumblCookies to welcome us back from
+            provided a coffee cart & @TheCookieFactorie to welcome us back from
             Thanksgiving break this morning
           </p>
         </div>
