--- a/Projects.html
+++ b/Projects.html
@@ -54,7 +54,9 @@
                 </div>
             </div>
             <div class="project-image">
-                <img src="path_to_image.jpg" alt="Description of image">
+                <div class="rectangle image1"></div>
+                <div class="rectangle image2"></div>
+                <div class="rectangle image3"></div>
             </div>
         </div>
         </section>
@@ -98,7 +100,9 @@
                 </div>
             </div>
             <div class="project-image">
-                <img src="path_to_image.jpg" alt="Description of image">
+                <div class="rectangle image1"></div>
+                <div class="rectangle image2"></div>
+                <div class="rectangle image3"></div>
             </div>
         </div>
     </section>
@@ -141,7 +145,9 @@
                 </div>
             </div>
             <div class="project-image">
-                <img src="path_to_image.jpg" alt="Description of image">
+                <div class="rectangle image1"></div>
+                <div class="rectangle image2"></div>
+                <div class="rectangle image3"></div>
             </div>
         </div>
     </section>
@@ -184,7 +190,9 @@
                 </div>
             </div>
             <div class="project-image">
-                <img src="path_to_image.jpg" alt="Description of image">
+                <div class="rectangle image1"></div>
+                <div class="rectangle image2"></div>
+                <div class="rectangle image3"></div>
             </div>
         </div>
     </section>
