too much, save me

--- a/Projects.html
+++ b/Projects.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Timothy Egans">
     <title>Projects | Timothy Egans</title>
     <link rel="icon" type="image/x-icon" href="Images/favicon (1).ico">
     <link rel="stylesheet" href="css/style.css">
@@ -122,7 +124,7 @@
 
     <section id="Project_3">
     <section class="project-section">
-        <h2 class="project-title">Project Name Here</h2>
+        <h2 class="project-title">Personal Website</h2>
         <div class="project-details">
             <div class="project-info">
                 <div class="info">
@@ -131,8 +133,8 @@
                 </div>
                 <div class="info">
                     <h3>Tools</h3>
-                    <p>Sketch</p>
-                    <p>Illustrator</p>
+                    <p>Figma</p>
+                    <p>Photoshop</p>
                 </div>
                 <div class="info">
                     <h3>Deliverables</h3>
