Added content to project page

--- a/Projects.html
+++ b/Projects.html
@@ -56,10 +56,15 @@
                 </div>
             </div>
             <div class="project-image">
-                <div class="rectangle image1"></div>
-                <div class="rectangle image2"></div>
-                <div class="rectangle image3"></div>
-            </div>
+                <div class="rectangle image1">
+                    <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
+                </div>
+                <div class="rectangle image2">
+                    <img src="path_to_project1_image2.jpg" alt="Project 1 Image 2">
+                </div>
+                <div class="rectangle image3">
+                    <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
+                </div>
         </div>
         </section>
     </section>
@@ -102,10 +107,15 @@
                 </div>
             </div>
             <div class="project-image">
-                <div class="rectangle image1"></div>
-                <div class="rectangle image2"></div>
-                <div class="rectangle image3"></div>
-            </div>
+                <div class="rectangle image1">
+                    <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
+                </div>
+                <div class="rectangle image2">
+                    <img src="path_to_project1_image2.jpg" alt="Project 1 Image 2">
+                </div>
+                <div class="rectangle image3">
+                    <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
+                </div>
         </div>
     </section>
     
@@ -138,18 +148,24 @@
                 </div>
                 <div class="info">
                     <h3>Deliverables</h3>
-                    <p>Visual system</p>
-                    <p>Responsive web</p>
+                    <p>Visual web page</p>
+                    <p>Responsive web design</p>
                 </div>
                 <div class="info">
                     <h3>Duration</h3>
-                    <p>8 weeks</p>
+                    <p>4 weeks</p>
                 </div>
             </div>
             <div class="project-image">
-                <div class="rectangle image1"></div>
-                <div class="rectangle image2"></div>
-                <div class="rectangle image3"></div>
+                <div class="rectangle image1">
+                    <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
+                </div>
+                <div class="rectangle image2">
+                    <img src="path_to_project1_image2.jpg" alt="Project 1 Image 2">
+                </div>
+                <div class="rectangle image3">
+                    <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
+                </div>
             </div>
         </div>
     </section>
@@ -160,9 +176,9 @@
             <h2>Overview</h2>
         </div>
         <div class="right-section">
-            <p>eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra justo nec ultrices dui sapien eget mi proin sed libero enim sed faucibus turpis in eu mi bibendum neque egestas congue quisque egestas diam in arcu cursus
+            <p>Driven by the potential of a digital presence, I decided to craft my own website. Rather than using pre-built platforms, I developed and coded it, ensuring a unique and personal representation of my journey.
             </p>
-            <p>non consectetur a erat nam at lectus urna duis convallis convallis tellus id interdum velit laoreet id donec ultrices tincidunt arcu non sodales neque sodales ut etiam sit amet nisl purus in mollis nunc sed id semper risus in hendrerit gravida rutrum quisque non tellus orci ac auctor augue mauris augue neque gravida in fermentum et sollicitudin ac orci phasellus egestas</p>
+            <p>In the initial stages, I turned to Figma, a powerful design tool, to create both wireframes and high-fidelity prototypes for my website. My designs were inspired by the innovative portfolios I observed on <a href="https://www.cofolios.com/" class="custom-link"> Cofolios</a>. This ensured that I had a clear visual and functional roadmap before diving into the coding phase. After laying out the design groundwork, I then used Adobe Photoshop to craft a personalized image for my 'About' section, enhancing the overall aesthetics and personal touch of the site. With the visuals in place, I embarked on the development phase. Using the core web technologies - HTML, CSS, and JavaScript, I meticulously translated my designs into a fully functional static web page.</p>
         </div>
     </section>
     </section>
@@ -192,10 +208,15 @@
                 </div>
             </div>
             <div class="project-image">
-                <div class="rectangle image1"></div>
-                <div class="rectangle image2"></div>
-                <div class="rectangle image3"></div>
-            </div>
+                <div class="rectangle image1">
+                    <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
+                </div>
+                <div class="rectangle image2">
+                    <img src="path_to_project1_image2.jpg" alt="Project 1 Image 2">
+                </div>
+                <div class="rectangle image3">
+                    <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
+                </div>
         </div>
     </section>
     
