added landing image, more project content, and mor

--- a/Projects.html
+++ b/Projects.html
@@ -84,7 +84,7 @@
 
     <section id="Project_2">
     <section class="project-section">
-        <h2 class="project-title">Project Name Here</h2>
+        <h2 class="project-title">Unreal Engine Physics</h2>
         <div class="project-details">
             <div class="project-info">
                 <div class="info">
@@ -93,28 +93,28 @@
                 </div>
                 <div class="info">
                     <h3>Tools</h3>
-                    <p>Sketch</p>
-                    <p>Illustrator</p>
+                    <p>Unreal Engine 5</p>
+                    <p>Blueprint</p>
                 </div>
                 <div class="info">
                     <h3>Deliverables</h3>
-                    <p>Visual system</p>
+                    <p>Simple game</p>
                     <p>Responsive web</p>
                 </div>
                 <div class="info">
                     <h3>Duration</h3>
-                    <p>8 weeks</p>
+                    <p>2 weeks</p>
                 </div>
             </div>
             <div class="project-image">
                 <div class="rectangle image1">
-                    <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
+                    <img src="Images/Physics.png" alt="Project 2 Image 1">
                 </div>
                 <div class="rectangle image2">
-                    <img src="path_to_project1_image2.jpg" alt="Project 1 Image 2">
+                    <img src="Images/Physics2.png" alt="Project 2 Image 2">
                 </div>
                 <div class="rectangle image3">
-                    <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
+                    <img src="Images/Physics3.png" alt="Project 2 Image 3">
                 </div>
         </div>
     </section>
@@ -158,13 +158,13 @@
             </div>
             <div class="project-image">
                 <div class="rectangle image1">
-                    <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
+                    <img src="Images/FigmaWire.png" alt="Project 3 Image 1">
                 </div>
                 <div class="rectangle image2">
-                    <img src="path_to_project1_image2.jpg" alt="Project 1 Image 2">
+                    <img src="Images/FigmaWire.png" alt="Project 3 Image 2">
                 </div>
                 <div class="rectangle image3">
-                    <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
+                    <img src="Images/FigmaWire.png" alt="Project 3 Image 3">
                 </div>
             </div>
         </div>
@@ -209,13 +209,13 @@
             </div>
             <div class="project-image">
                 <div class="rectangle image1">
-                    <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
+                    <img src="path_to_project1_image1.jpg" alt="Project 4 Image 1">
                 </div>
                 <div class="rectangle image2">
-                    <img src="path_to_project1_image2.jpg" alt="Project 1 Image 2">
+                    <img src="path_to_project1_image2.jpg" alt="Project 4 Image 2">
                 </div>
                 <div class="rectangle image3">
-                    <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
+                    <img src="path_to_project1_image3.jpg" alt="Project 4 Image 3">
                 </div>
         </div>
     </section>
