--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p>Welcome to my personal website.</p>
         </div>
         <div class="introduction-image">
-            <img src="path-to-your-image.jpg" alt="Description of Image" />
+            <img src="Images/Coding Room (Without Background).png" alt="Description of Image" />
         </div>
     </section>
 
