more content on projects page

--- a/Projects.html
+++ b/Projects.html
@@ -99,7 +99,6 @@
                 <div class="info">
                     <h3>Deliverables</h3>
                     <p>Simple game</p>
-                    <p>Responsive web</p>
                 </div>
                 <div class="info">
                     <h3>Duration</h3>
@@ -125,9 +124,8 @@
             <h2>Overview</h2>
         </div>
         <div class="right-section">
-            <p>eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra justo nec ultrices dui sapien eget mi proin sed libero enim sed faucibus turpis in eu mi bibendum neque egestas congue quisque egestas diam in arcu cursus
-            </p>
-            <p>non consectetur a erat nam at lectus urna duis convallis convallis tellus id interdum velit laoreet id donec ultrices tincidunt arcu non sodales neque sodales ut etiam sit amet nisl purus in mollis nunc sed id semper risus in hendrerit gravida rutrum quisque non tellus orci ac auctor augue mauris augue neque gravida in fermentum et sollicitudin ac orci phasellus egestas</p>
+            <p>I've always been curious about Unreal Engine. This project is my very first try using it, and I'm excited to learn more as I go along and create more projects using Unreal Engine.</p>
+            <p>Interactive game developed using Unreal Engine's Level Blueprint. In this physics-based experience, players are tasked to aim and shoot projectiles at dynamic assets. These assets respond with realistic reactions upon collision, making each shot a unique interaction. The challenge intensifies with limited ammo, pushing players to strategize each move. Once the ammo depletes, the scene instantly reloads for continuous gameplay. Through this project, I explored the depth and capabilities of Unreal Engine's Level Blueprint, emphasizing intuitive player experiences and physics simulations.</p>
         </div>
     </section>
     </section>
@@ -158,7 +156,7 @@
             </div>
             <div class="project-image">
                 <div class="rectangle image1">
-                    <img src="Images/FigmaWire.png" alt="Project 3 Image 1">
+                    <img src="Images/VScode.png" alt="Project 3 Image 1">
                 </div>
                 <div class="rectangle image2">
                     <img src="Images/FigmaWire.png" alt="Project 3 Image 2">
