target= "blank" changes

--- a/About.html
+++ b/About.html
@@ -61,7 +61,7 @@
     <img width="48" height="48" src="https://img.icons8.com/color/48/flutter.png" alt="flutter"/>
     <img width="50" height="50" src="https://img.icons8.com/ios/50/adobe-creative-cloud--v1.png" alt="adobe-creative-cloud--v1"/>
     
-    <p class="Icons8">Icons by <a href="https://icons8.com">Icons8</a></p>
+    <p class="Icons8">Icons by <a href="https://icons8.com" target="_blank">Icons8</a></p>
 
 
     </div>
