--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="footer-content">
             <p>Built by Timothy Egans in 2023</p>
 
-            <p class="art">commissioned illustration by <a href="https://twitter.com/alicia_gadot" class="custom-link"> alicia_gadot</a></p>
+            <p class="art">commissioned illustration by <a href="https://twitter.com/alicia_gadot" class="custom-link" target="_blank"> alicia_gadot</a></p>
             <div class="social-icons">
                 <a href="https://www.linkedin.com/in/timothyegans/" target="_blank" rel="noopener noreferrer">
                     <i class="fa-brands fa-linkedin"></i>
