--- a/About.html
+++ b/About.html
@@ -46,7 +46,7 @@
     
     <p class="short-about">🎮 In my downtime, I'm an avid Street Fighter enthusiast, and I enjoy lifting weights to stay active. I also have a passion for photography and ux design, capturing moments and creating visuals that resonate. When I'm not immersed in these activities, I find peace in walking and watching the cityscape, especially during the rain. </p>
     
-    <h2 class="tools">languages and tools I've worked with</h2>
+    <h2 class="tools">languages and tools I've worked with and still learning</h2>
     <img width="48" height="48" src="https://img.icons8.com/color/48/000000/figma--v2.png" alt="figma--v2"/>
     <img width="48" height="48" src="https://img.icons8.com/color/48/000000/c-plus-plus-logo.png" alt="c-plus-plus-logo"/>
     <img width="48" height="48" src="https://img.icons8.com/fluency/48/000000/html-5.png" alt="html-5"/>
