New Content On Projects

--- a/Projects.html
+++ b/Projects.html
@@ -33,26 +33,26 @@
 
     <section id="Project_1">
         <section class="project-section">
-        <h2 class="project-title">Project Name Here</h2>
+        <h2 class="project-title">HorrorBuddy</h2>
         <div class="project-details">
             <div class="project-info">
                 <div class="info">
                     <h3>Project Type</h3>
-                    <p>Individual project</p>
+                    <p>Collaboritve Project</p>
                 </div>
                 <div class="info">
                     <h3>Tools</h3>
-                    <p>Sketch</p>
-                    <p>Illustrator</p>
+                    <p>Figma</p>
+                    <p>Creative Cloud</p>
+                    <p>Flutter</p>
                 </div>
                 <div class="info">
                     <h3>Deliverables</h3>
-                    <p>Visual system</p>
-                    <p>Responsive web</p>
+                    <p>iOs App</p>
                 </div>
                 <div class="info">
                     <h3>Duration</h3>
-                    <p>8 weeks</p>
+                    <p>Current</p>
                 </div>
             </div>
             <div class="project-image">
@@ -60,7 +60,7 @@
                     <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
                 </div>
                 <div class="rectangle image2">
-                    <img src="path_to_project1_image2.jpg" alt="Project 1 Image 2">
+                    <img src="Images/HorrorMockup.JPG" alt="Project 1 Image 2">
                 </div>
                 <div class="rectangle image3">
                     <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
@@ -75,9 +75,9 @@
             <h2>Overview</h2>
         </div>
         <div class="right-section">
-            <p>eleifend quam adipiscing vitae proin sagittis nisl rhoncus mattis rhoncus urna neque viverra justo nec ultrices dui sapien eget mi proin sed libero enim sed faucibus turpis in eu mi bibendum neque egestas congue quisque egestas diam in arcu cursus
+            <p>The idea for this project stemmed from me and a coworker at Planet Fitness, who also attends Texas State University, majoring in Electrical Engineering, sharing an intrinsic love for horror movies. Our frequent discussions, interspersed with cinematic critiques and film recommendations, highlighted a gap. While our passion for the genre was evident, we lacked a structured way to track and explore our movie interests. Enter HorrorBuddy. Conceived as a solution, this app aims to not only catalog our favorites but to also introduce us to new titles, transforming casual discussions into enriched cinematic explorations.
             </p>
-            <p>non consectetur a erat nam at lectus urna duis convallis convallis tellus id interdum velit laoreet id donec ultrices tincidunt arcu non sodales neque sodales ut etiam sit amet nisl purus in mollis nunc sed id semper risus in hendrerit gravida rutrum quisque non tellus orci ac auctor augue mauris augue neque gravida in fermentum et sollicitudin ac orci phasellus egestas</p>
+            <p>An iOS application specially crafted for horror movie enthusiasts, currently in the Figma design phase. This app, once developed, will empower users with an intuitive platform to catalog, explore, and uncover horror film classics. Envisioned features encompass personalized movie libraries, an advanced search module, and a handpicked 'To-Watch' list, all illustrated within a spine-chilling Figma prototype aiming for an atmospheric user experience.</p>
         </div>
     </section>
 
