mobile responsiveness changes

--- a/About.html
+++ b/About.html
@@ -34,7 +34,7 @@
     <main>
     <div class="two-columns">
         <div>
-         <img src="Images/Me.png" alt="This is a portrait of Christy Hu." width="85%">
+         <img src="Images/Me.png" width="85%">
         </div>
         <div class="about">
         <h1>About me</h1>
