--- a/Projects.html
+++ b/Projects.html
@@ -48,17 +48,22 @@
                 </div>
                 <div class="info">
                     <h3>Deliverables</h3>
-                    <p>iOs App</p>
+                    <p>iOS App</p>
                 </div>
                 <div class="info">
                     <h3>Duration</h3>
                     <p>Current</p>
                 </div>
             </div>
+
+            <div class="space"></div>
+
             <div class="project-image">
+                
                 <div class="rectangle image1">
-                    <img src="path_to_project1_image1.jpg" alt="Project 1 Image 1">
+                    <img src="Images/HorrorFigma.png" alt="Project 1 Image 1">
                 </div>
+
                 <div class="rectangle image2">
                     <img src="Images/HorrorMockup.JPG" alt="Project 1 Image 2">
                 </div>
@@ -72,7 +77,7 @@
     <section class="two-part-section">
         <div class="left-section">
             <h2 class ="blueText">Background</h2>
-            <h2>Overview</h2>
+            <h2 class = "AlignText">Overview</h2>
         </div>
         <div class="right-section">
             <p>The idea for this project stemmed from me and a coworker at Planet Fitness, who also attends Texas State University, majoring in Electrical Engineering, sharing an intrinsic love for horror movies. Our frequent discussions, interspersed with cinematic critiques and film recommendations, highlighted a gap. While our passion for the genre was evident, we lacked a structured way to track and explore our movie interests. Enter HorrorBuddy. Conceived as a solution, this app aims to not only catalog our favorites but to also introduce us to new titles, transforming casual discussions into enriched cinematic explorations.
@@ -105,6 +110,9 @@
                     <p>2 weeks</p>
                 </div>
             </div>
+
+            <div class="space"></div>
+
             <div class="project-image">
                 <div class="rectangle image1">
                     <img src="Images/Physics.png" alt="Project 2 Image 1">
@@ -154,6 +162,9 @@
                     <p>4 weeks</p>
                 </div>
             </div>
+
+            <div class="space"></div>
+
             <div class="project-image">
                 <div class="rectangle image1">
                     <img src="Images/VScode.png" alt="Project 3 Image 1">
@@ -167,7 +178,7 @@
             </div>
         </div>
     </section>
-    
+
     <section class="two-part-section">
         <div class="left-section">
             <h2 class ="blueText">Background</h2>
@@ -205,6 +216,9 @@
                     <p>8 weeks</p>
                 </div>
             </div>
+
+            <div class="space"></div>
+
             <div class="project-image">
                 <div class="rectangle image1">
                     <img src="path_to_project1_image1.jpg" alt="Project 4 Image 1">
