Added Personalized Section

--- a/About.html
+++ b/About.html
@@ -68,6 +68,66 @@
     </div>
     </div>
 </main>
+
+<section class="media-section">
+    <div class="media-block">
+        <h2 class="section-title">Who I'm Listening To <img width="25" height="25" src="https://img.icons8.com/ios/25/aipods-pro-max.png" alt="aipods-pro-max"/></h2>
+        <!-- Music Item 1 -->
+        <div class="media-item">
+            <a href="https://open.spotify.com/artist/6UbmqUEgjLA6jAcXwbM1Z9" target="_blank">
+                <img src="Images/Bibi.jpg" alt="Artist Image">
+                <h3>BIBI</h3>
+                <p class="media-P">Top picks: BAD SAD AND MAD, The Weekend, Life is a B...</p>
+            </a>
+        </div>
+        <!-- Music Item 2 -->
+        <div class="media-item">
+            <a href="https://open.spotify.com/artist/5FxsPS1K61fHEVB3FNZw6Y" target="_blank">
+                <img src="Images/Blanco.jpg" alt="Artist Image">
+                <h3>Blanco</h3>
+                <p class="media-P">Top picks: Brilliant Mind, Londis, Carpe Diem</p>
+            </a>
+        </div>
+        <!-- Music Item 3 -->
+        <div class="media-item">
+            <a href="https://open.spotify.com/artist/5K4W6rqBFWDnAN6FQUkS6x" target="_blank">
+                <img src="Images/Ye.jpeg" alt="Artist Image">
+                <h3>Kanye West</h3>
+                <p class="media-P">Top picks: I Wonder, 24, Last Call, All Falls Down</p>
+            </a>
+        </div>
+    </div>
+
+    <div class="media-block">
+        <h2 class="section-title">What I'm Playing <img width="25" height="25" src="https://img.icons8.com/ios/25/arcade-cabinet.png" alt="arcade-cabinet"/></h2>
+        <!-- Book Item 1 -->
+        
+        <div class="media-item">
+            <a href="https://www.streetfighter.com/6/en-us" target="_blank">
+                <img src="Images/SF6.jpeg" alt="Game Image">
+                <h3>Street Fighter 6</h3>
+                <p class="media-G">Capcom</p>
+            </a>
+        </div>
+        <!-- Book Item 2 -->
+        <div class="media-item">
+            <a href="https://www.leagueoflegends.com/en-us/" target="_blank">
+                <img src="Images/LoL_Icon_Rendered_Hi-Res.png" alt="Book Image">
+                <h3>League of legends</h3>
+                <p class="media-G">Riot Games</p>
+            </a>
+        </div>
+        <!-- Book Item 3 -->
+        <div class="media-item">
+            <a href="https://www.ea.com/games/apex-legends" target="_blank">
+                <img src="Images/Apex.avif" alt="Book Image">
+                <h3>Apex Legends</h3>
+                <p class="media-G">Respawn</p>
+            </a>
+        </div>
+    </div>
+</section>
+
     <footer class="site-footer">
         <div class="footer-content">
             <p>Built by Timothy Egans in 2023</p>
