Finally changed porject pictures on landing page

--- a/Projects.html
+++ b/Projects.html
@@ -173,7 +173,7 @@
                     <img src="Images/FigmaWire.png" alt="Project 3 Image 2">
                 </div>
                 <div class="rectangle image3">
-                    <img src="Images/FigmaWire.png" alt="Project 3 Image 3">
+                    <img src="Images/Webtsite.png" alt="Project 3 Image 3">
                 </div>
             </div>
         </div>
