A lot of changes, but now complete

--- a/Projects.html
+++ b/Projects.html
@@ -91,14 +91,14 @@
             <div class="project-image">
                 
                 <div class="rectangle image1">
-                    <img src="Images/HorrorFigma.png" alt="Project 1 Image 1">
+                    <img src="Images/Screenshot 2023-10-17 at 10.26.34 AM.png" alt="Project 1 Image 1">
                 </div>
 
                 <div class="rectangle image2">
                     <img src="Images/HorrorMockup.JPG" alt="Project 1 Image 2">
                 </div>
                 <div class="rectangle image3">
-                    <img src="path_to_project1_image3.jpg" alt="Project 1 Image 3">
+                    <img src="Images/bloom-woman-and-man-doing-web-browser-development.gif" alt="Project 1 Image 3">
                 </div>
         </div>
         </section>
@@ -185,11 +185,10 @@
                 <div class="info">
                     <h3>Deliverables</h3>
                     <p>Visual web page</p>
-                    <p>Responsive web design</p>
                 </div>
                 <div class="info">
                     <h3>Duration</h3>
-                    <p>4 weeks</p>
+                    <p>5 weeks</p>
                 </div>
             </div>
 
@@ -229,21 +228,21 @@
             <div class="project-info">
                 <div class="info">
                     <h3>Project Type</h3>
-                    <p>Individual project</p>
+                    <p>--------</p>
                 </div>
                 <div class="info">
                     <h3>Tools</h3>
-                    <p>Sketch</p>
-                    <p>Illustrator</p>
+                    <p>-------</p>
+                    <p>-----------</p>
                 </div>
                 <div class="info">
                     <h3>Deliverables</h3>
-                    <p>Visual system</p>
-                    <p>Responsive web</p>
+                    <p>------------</p>
+                    <p>---------------</p>
                 </div>
                 <div class="info">
                     <h3>Duration</h3>
-                    <p>8 weeks</p>
+                    <p>-----</p>
                 </div>
             </div>
 
@@ -251,13 +250,13 @@
 
             <div class="project-image">
                 <div class="rectangle image1">
-                    <img src="path_to_project1_image1.jpg" alt="Project 4 Image 1">
+                    <img src="Images/dizzy-programmer-working-with-code-on-a-laptop.gif" alt="Project 4 Image 1">
                 </div>
                 <div class="rectangle image2">
-                    <img src="path_to_project1_image2.jpg" alt="Project 4 Image 2">
+                    <img src="Images/transistor-page-under-construction.gif" alt="Project 4 Image 2">
                 </div>
                 <div class="rectangle image3">
-                    <img src="path_to_project1_image3.jpg" alt="Project 4 Image 3">
+                    <img src="Images/taxi-teamwork-in-office.gif" alt="Project 4 Image 3">
                 </div>
         </div>
     </section>
