cursor changes color when theme is switched

--- a/About.html
+++ b/About.html
@@ -12,6 +12,9 @@
         if (locals == 'dark'){
             document.documentElement.setAttribute('data-theme', 'dark')
         }
+
+
+
     </script>
 
     <link rel="icon" type="image/x-icon" href="Images/favicon (1).ico">
@@ -93,10 +96,9 @@
     <img width="48" height="48" src="https://img.icons8.com/color/48/flutter.png" alt="flutter"/>
     <img width="48" height="48" src="Images/icons8-adobe-creative-cloud (1).gif" alt="adobe-creative-cloud--v1"/>
     <img width="48" height="48" src="https://img.icons8.com/color/48/dart.png" alt="dart"/>
-    <img width="48" height="48" src="Images/icons8-react-js.gif" alt="visual-studio-code-2019"/>
+    <img width="48" height="48" src="Images/icons8-react-js.gif" alt="React"/>
     <img width="48" height="48" src="https://img.icons8.com/color/48/visual-studio-code-2019.png" alt="visual-studio-code-2019"/>
     <img width="48" height="48" src="https://img.icons8.com/color/48/intellij-idea.png" alt="intellij-idea"/>
-
     
     
     <p class="Icons8">Icons and gifs by <a href="https://icons8.com" target="_blank">Icons8</a></p>
