--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
                     <i class="fa fa-close" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="Resume/RESUME_TIMOTHYEGANSJR_10-02-23.pdf" target="_blank">RESUME</a></li>
+                        <li><a href="Resume/RESUME_TIMOTHYEGANSJR_10-11-23.pdf" target="_blank">RESUME</a></li>
                         <li><a href="Projects.html">PROJECTS</a></li>
                         <li><a href="About.html">ABOUT</a></li>
                     </ul>
@@ -166,10 +166,10 @@
         </div>
         <!-- Game Item 3 -->
         <div class="media-item">
-            <a href="https://www.ea.com/games/apex-legends" target="_blank">
-                <img src="Images/Apex.avif" alt="Game Image">
-                <h3>Apex Legends</h3>
-                <p class="media-G">Respawn</p>
+            <a href="https://baldursgate3.game/" target="_blank">
+                <img src="Images/BG3.webp" alt="Game Image">
+                <h3>Baldur's gate 3</h3>
+                <p class="media-G">Larian Studios</p>
             </a>
         </div>
         <!-- Game Item 4 -->
