--- a/About.html
+++ b/About.html
@@ -33,7 +33,7 @@
                     <i class="fa fa-close" onclick="hideMenu()"></i>
                     <ul>
                         <li><a href="index.html">HOME</a></li>
-                        <li><a href="Resume/RESUME_TIMOTHYEGANSJR_10-11-23.pdf" target="_blank">RESUME</a></li>
+                        <li><a href="Resume/RESUME_TIMOTHYEGANSJR_10-27-23.pdf" target="_blank">RESUME</a></li>
                         <li><a href="Projects.html">PROJECTS</a></li>
                         <li><a href="About.html">ABOUT</a></li>
                     </ul>
@@ -167,9 +167,9 @@
         <!-- Game Item 3 -->
         <div class="media-item">
             <a href="https://baldursgate3.game/" target="_blank">
-                <img src="Images/BG3.webp" alt="Game Image">
-                <h3>Baldur's gate 3</h3>
-                <p class="media-G">Larian Studios</p>
+                <img src="Images/Valorant.png" alt="Game Image">
+                <h3>Valorant</h3>
+                <p class="media-G">Riot Games</p>
             </a>
         </div>
         <!-- Game Item 4 -->
