--- a/About.html
+++ b/About.html
@@ -72,7 +72,7 @@
         </div>
         <div class="about">
         <h1>About me</h1>
-        <p class="short-about">🌱 I'm a computer science student at Texas State University. Raised in O‘ahu, Hawaii I've always been drawn to the world of technology and its transformative power. </p>
+        <p class="short-about">🌱 I'm a computer science student at Texas State University. Raised in Honolulu, Hawaii I've always been drawn to the world of technology and its transformative power. </p>
     
     <p class="short-about">🖥️ My fascination with software began early on and I've since delved deep into the realm of computer science at my university. Participating in tech-related activities, I took part in the NCL cybersecurity competition, which further ignited my passion for the field.</p>
     
