forgot to change Valorant link

--- a/About.html
+++ b/About.html
@@ -166,7 +166,7 @@
         </div>
         <!-- Game Item 3 -->
         <div class="media-item">
-            <a href="https://baldursgate3.game/" target="_blank">
+            <a href="https://playvalorant.com/en-us/" target="_blank">
                 <img src="Images/Valorant.png" alt="Game Image">
                 <h3>Valorant</h3>
                 <p class="media-G">Riot Games</p>
