Changed one Artist in music top picks

--- a/About.html
+++ b/About.html
@@ -121,10 +121,10 @@
         </div>
         <!-- Music Item 2 -->
         <div class="media-item">
-            <a href="https://open.spotify.com/artist/5FxsPS1K61fHEVB3FNZw6Y" target="_blank">
-                <img src="Images/Blanco.jpg" alt="Artist Image">
-                <h3>Blanco</h3>
-                <p class="media-P">Top picks: Brilliant Mind, Londis, Carpe Diem</p>
+            <a href="https://open.spotify.com/artist/5tQMB0cuNXdCtzovGt55uD" target="_blank">
+                <img src="Images/Lucki.jpeg" alt="Artist Image">
+                <h3>Lucki</h3>
+                <p class="media-P">Top picks: Out My Way, Sunset, Almost Back</p>
             </a>
         </div>
         <!-- Music Item 3 -->
