Changed Lucki to Ken Carson

--- a/About.html
+++ b/About.html
@@ -121,10 +121,10 @@
         </div>
         <!-- Music Item 2 -->
         <div class="media-item">
-            <a href="https://open.spotify.com/artist/5tQMB0cuNXdCtzovGt55uD" target="_blank">
-                <img src="Images/Lucki.jpeg" alt="Artist Image">
-                <h3>Lucki</h3>
-                <p class="media-P">Top picks: Out My Way, Sunset, Almost Back</p>
+            <a href="https://open.spotify.com/artist/3gBZUcNeVumkeeJ19CY2sX" target="_blank">
+                <img src="Images/Ken_Carson.jpeg" alt="Artist Image">
+                <h3>Ken Carson</h3>
+                <p class="media-P">Top picks: Change, Run + Ran, Rock N Roll, Clutch</p>
             </a>
         </div>
         <!-- Music Item 3 -->
