New Content in about me

--- a/About.html
+++ b/About.html
@@ -116,7 +116,7 @@
             <a href="https://open.spotify.com/artist/6UbmqUEgjLA6jAcXwbM1Z9" target="_blank">
                 <img src="Images/Bibi.jpg" alt="Artist Image">
                 <h3>BIBI</h3>
-                <p class="media-P">Top picks: BAD SAD AND MAD, The Weekend, Life is a B...</p>
+                <p class="media-P">Top picks: BAD SAD AND MAD, The Weekend, Umm... Life, PADO</p>
             </a>
         </div>
         <!-- Music Item 2 -->
@@ -124,7 +124,7 @@
             <a href="https://open.spotify.com/artist/3gBZUcNeVumkeeJ19CY2sX" target="_blank">
                 <img src="Images/Ken_Carson.jpeg" alt="Artist Image">
                 <h3>Ken Carson</h3>
-                <p class="media-P">Top picks: Change, Run + Ran, Rock N Roll, Clutch</p>
+                <p class="media-P">Top picks: Change, Run + Ran, Rock N Roll, Clutch, Freestyle 3</p>
             </a>
         </div>
         <!-- Music Item 3 -->
@@ -132,7 +132,7 @@
             <a href="https://open.spotify.com/artist/5K4W6rqBFWDnAN6FQUkS6x" target="_blank">
                 <img src="Images/Ye.webp" alt="Artist Image">
                 <h3>Kanye West</h3>
-                <p class="media-P">Top picks: I Wonder, 24, Last Call, All Falls Down</p>
+                <p class="media-P">Top picks: I Wonder, 24, Last Call, All Falls Down, Vultures</p>
             </a>
         </div>
         <!-- Music Item 4 -->
@@ -141,6 +141,14 @@
                 <img src="Images/New_Jeans_Cover.webp" alt="Artist Image">
                 <h3>NewJeans</h3>
                 <p class="media-P">Top picks: ASAP, Ditto, Cool With You, Attention</p>
+            </a>
+        </div>
+         <!-- Music Item 5 -->
+         <div class="media-item">
+            <a href="https://open.spotify.com/artist/6l3HvQ5sa6mXTsMTB19rO5" target="_blank">
+                <img src="Images/Jcole.jpeg" alt="Artist Image">
+                <h3>J. Cole</h3>
+                <p class="media-P">Top picks: Change, Sacrifices, Neigbors, No Role Modelz</p>
             </a>
         </div>
     </div>
@@ -174,10 +182,18 @@
         </div>
         <!-- Game Item 4 -->
         <div class="media-item">
-            <a href="https://insomniac.games/game/marvels-spider-man-2/" target="_blank">
-                <img src="Images/Spiderman.webp" alt="Game Image">
-                <h3>Marvel's Spider-Man 2</h3>
-                <p class="media-G">Insomniac Games</p>
+            <a href="https://www.rockstargames.com/reddeadredemption2" target="_blank">
+                <img src="Images/RDR2.png" alt="Game Image">
+                <h3>Red Dead Redemption 2</h3>
+                <p class="media-G">Rockstar Games</p>
+            </a>
+        </div>
+        <!-- Game Item 5 -->
+        <div class="media-item">
+            <a href="https://na.finalfantasyxvi.com/" target="_blank">
+                <img src="Images/Final_Fantasy_XVI_logo.webp" alt="Game Image">
+                <h3>Final Fantasy XVI</h3>
+                <p class="media-G">Square Enix</p>
             </a>
         </div>
     </div>
