--- a/About.html
+++ b/About.html
@@ -182,10 +182,10 @@
         </div>
         <!-- Game Item 4 -->
         <div class="media-item">
-            <a href="https://www.rockstargames.com/reddeadredemption2" target="_blank">
-                <img src="Images/RDR2.png" alt="Game Image">
-                <h3>Red Dead Redemption 2</h3>
-                <p class="media-G">Rockstar Games</p>
+            <a href="https://callisto.sds.com/en-us/" target="_blank">
+                <img src="Images/thecallistoprotocoltitle.jpg" alt="Game Image">
+                <h3>The Callisto Protocol</h3>
+                <p class="media-G">Striking Distance Studios</p>
             </a>
         </div>
         <!-- Game Item 5 -->
