--- a/About.html
+++ b/About.html
@@ -182,10 +182,10 @@
         </div>
         <!-- Game Item 4 -->
         <div class="media-item">
-            <a href="https://quarrygame.2k.com/" target="_blank">
-                <img src="Images/The_Quarry_cover_art.png" alt="Game Image">
-                <h3>The Quarry</h3>
-                <p class="media-G">Supermassive Games</p>
+            <a href="https://tekken.com/" target="_blank">
+                <img src="Images/Tekken_8_cover_art.jpg" alt="Game Image">
+                <h3>Tekken 8</h3>
+                <p class="media-G">Bandai Namco Studios</p>
             </a>
         </div>
         <!-- Game Item 5 -->
