Changed Music and Games content

--- a/About.html
+++ b/About.html
@@ -120,10 +120,10 @@
         </div>
         <!-- Music Item 2 -->
         <div class="media-item">
-            <a href="https://open.spotify.com/artist/3gBZUcNeVumkeeJ19CY2sX" target="_blank">
-                <img src="Images/Ken_Carson.jpeg" alt="Artist Image">
-                <h3>Ken Carson</h3>
-                <p class="media-P">Top picks: Change, Run + Ran, Rock N Roll, Clutch, Freestyle 3</p>
+            <a href="https://open.spotify.com/artist/2R0CFyeMDiRbfkhkIMbyl1" target="_blank">
+                <img src="Images/CashCo.jpg" alt="Artist Image">
+                <h3>Cash Cobain</h3>
+                <p class="media-P">Top picks: Fisherrr, dunk, Attitude, Body</p>
             </a>
         </div>
         <!-- Music Item 3 -->
@@ -136,18 +136,18 @@
         </div>
         <!-- Music Item 4 -->
         <div class="media-item">
-            <a href="https://open.spotify.com/artist/5lC9qDfzcZb5iQp6x17ASP" target="_blank">
-                <img src="Images/OurR.jpg" alt="Artist Image">
-                <h3>OurR</h3>
-                <p class="media-P">Top picks: Alone With You, haaAakkKKK!!!, 20+3, Bloom</p>
+            <a href="https://open.spotify.com/artist/3DHtfeD4PsmR9YGhCP4VF7" target="_blank">
+                <img src="Images/Nemzzz.jpg" alt="Artist Image">
+                <h3>Nemzzz</h3>
+                <p class="media-P">Top picks: Spinnin(Segway Remix), Us vs Them, IT'S US</p>
             </a>
         </div>
          <!-- Music Item 5 -->
          <div class="media-item">
-            <a href="https://open.spotify.com/artist/6l3HvQ5sa6mXTsMTB19rO5" target="_blank">
-                <img src="Images/Jcole.jpeg" alt="Artist Image">
-                <h3>J. Cole</h3>
-                <p class="media-P">Top picks: Change, Sacrifices, Neigbors, No Role Modelz</p>
+            <a href="https://open.spotify.com/artist/0qc4BFxcwRFZfevTck4fOi" target="_blank">
+                <img src="Images/Fakemink.jpg" alt="Artist Image">
+                <h3>Fakemink</h3>
+                <p class="media-P">Top picks: London Life, Just Kitten, Truffle, Baklava</p>
             </a>
         </div>
     </div>
@@ -173,10 +173,10 @@
         </div>
         <!-- Game Item 3 -->
         <div class="media-item">
-            <a href="https://playvalorant.com/en-us/" target="_blank">
-                <img src="Images/Valorant.png" alt="Game Image">
-                <h3>Valorant</h3>
-                <p class="media-G">Riot Games</p>
+            <a href="https://www.marvelrivals.com/" target="_blank">
+                <img src="Images/Rivals.jpg" alt="Game Image">
+                <h3>Marvel Rivals</h3>
+                <p class="media-G">NetEase Games</p>
             </a>
         </div>
         <!-- Game Item 4 -->
