REmoved Kanye from music

--- a/About.html
+++ b/About.html
@@ -126,10 +126,10 @@
         </div>
         <!-- Music Item 3 -->
         <div class="media-item">
-            <a href="https://open.spotify.com/artist/5K4W6rqBFWDnAN6FQUkS6x" target="_blank">
-                <img src="Images/Ye.webp" alt="Artist Image">
-                <h3>Kanye West</h3>
-                <p class="media-P">Top picks: I Wonder, 24, Last Call, All Falls Down, Vultures</p>
+            <a href="https://open.spotify.com/artist/1ybINI1qPiFbwDXamRtwxD?autoplay=true" target="_blank">
+                <img src="Images/smino.jpg" alt="Artist Image">
+                <h3>Smino</h3>
+                <p class="media-P">Top picks: Amphetamine, Z4L, Maybe In Nirvana, Netflix & Dusse</p>
             </a>
         </div>
         <!-- Music Item 4 -->
